--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,11 @@
+.image {
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 1000px;
+}
+
 body {
   background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
-}
-
-div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
-
-div.gallery:hover {
-    border: 1px solid #777;
-}
-
-div.gallery img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
 }
 
 h1, h2 {
